# Granita_Module

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cc  setup.sh
include/: .analysis.hh.swp  EcalHit.hh  MyEventAction.hh  MySteppingAction.hh  action.hh  analysis.hh  construction.hh  detector.hh  generator.hh  physics.hh  tracking.hh
macro/: gps.mac  vis.mac
run/: run.mac
run/macros/: run_pitch10_10GeV.mac  run_pitch10_1GeV.mac  run_pitch15_10GeV.mac  run_pitch15_1GeV.mac  run_pitch3_10GeV.mac  run_pitch3_1GeV.mac  run_pitch5_10GeV.mac  run_pitch5_1GeV.mac  run_pitch7_10GeV.mac  run_pitch7_1GeV.mac
run/scripts/: generate_jobs.py  macro_list.txt
src/: MyEventAction.cc  MySteppingAction.cc  action.cc  analysis.cc  construction.cc  detector.cc  generator.cc  physics.cc  tracking.cc
